<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="pavanasahithi.justbake.ItemListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    tools:context="pavanasahithi.justbake.ItemListActivity">

    <TextView
        android:id="@+id/id_text_view_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#2a38a7"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/ingredients"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#d1241e"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/steps"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/item_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/item_list_content" />
</LinearLayout>
